* regexp example, title

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 	</div></section>
 
 	<section class="slide"><div>
-		<h2>Регулярные выражения: search</h2>
+		<h2>Регулярные выражения: пример</h2>
 		<div data-ctrl="regexp">
 			<input value="/J([a-z])+(Sc(ri(p)t))/" class="inp_regexp" />
 
